tests/snapshots/run_wpt_conformance__litert_quantized_conv2d.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
qdq_subgraph.https.any.js quantized conv2d, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: QuantizeLinear { input: 6, scale: 7, zero_point: Some(8), options: Some(MLOperatorOptions { label: "" }), outputs: [11] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    input: f32[1, 1, 1, 3];
  }

  consts {
    operand_0: i32[1] @bytes([1, 0, 0, 0]);
    operand_1: f32[1] @bytes([128, 237, 192, 56]);
    operand_10: i8[1, 1, 1, 1] @bytes([0]);
    operand_2: i32[1] @bytes([0, 0, 0, 0]);
    operand_3: i8[1, 1, 1, 3] @bytes([2, 3, 4]);
    operand_4: f32[1, 1, 1, 1] @bytes([146, 44, 192, 60]);
    operand_5: i8[1, 1, 1, 1] @bytes([0]);
    operand_7: f32[1, 1, 1, 1] @bytes([129, 128, 128, 59]);
    operand_8: i8[1, 1, 1, 1] @bytes([128]);
    operand_9: f32[1, 1, 1, 1] @bytes([129, 128, 128, 59]);
  }

  nodes {
    [operand_11] = quantizeLinear(input, operand_7, operand_8, label="");
    [operand_12] = dequantizeLinear(operand_11, operand_7, operand_8, label="");
    [operand_13] = dequantizeLinear(operand_3, operand_4, operand_5, label="");
    [operand_14] = dequantizeLinear(operand_0, operand_1, operand_2, label="");
    [operand_15] = conv2d(operand_12, operand_13, operand_14, bias=14, dilations=[], filterLayout="ohwi", groups=1, inputLayout="nhwc", label="", padding=[], strides=[]);
    [operand_16] = quantizeLinear(operand_15, operand_9, operand_10, label="");
    [output] = dequantizeLinear(operand_16, operand_9, operand_10, label="");
  }

  outputs { output; }
}
